# DetectorCalibration

./: CMakeLists.txt  README.md  main.cpp
doxygen/: Doxyfile  Doxyfile.in
examples/: configExample.txt
include/: CalibrationConfig.h  Calibrator.h  ConfigParser.h  Detector.h  Options.h  PeakFinder.h  Source.h  TSpectrumFinder.h  YY1Array.h  YY1Detector.h
resources/: testConfig.txt
source/: CalibrationConfig.cpp  Calibrator.cpp  ConfigParser.cpp  Detector.cpp  PeakFinder.cpp  Source.cpp  TSpectrumFinder.cpp  YY1Array.cpp  YY1Detector.cpp
